--- a/right_review_codebase/signup.html
+++ b/right_review_codebase/signup.html
@@ -11,6 +11,7 @@
     <title>Right Review Signup</title>
 
     <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/simple-line-icons.css" rel="stylesheet"> -->
@@ -30,11 +31,17 @@
         .open-hidden {
             display: none;
         }
+        #projectLogo {
+           width: 400px;
+        }
     </style>
 </head>
 
 <body>
     <main class="d-flex align-items-center justify-content-center">
+        <div>
+            <img id='projectLogo' src="img/rightReviewLogo/dark_logo_white_background.jpg"></img>
+        </div>
         <div class="card">
             <div class="card-body p-4">
                 <h1>Signup</h1>
@@ -49,14 +56,16 @@
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="icon-lock"></i></span>
+                            <span class="input-group-text"><i style="font-size:24px" class="fa">&#xf023;</i></span>
+                            <!--<span class="input-group-text"><i class="icon-lock"></i></span>-->
                         </div>
                         <input type="password" class="form-control" placeholder="Password" name="password">
                     </div>
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="icon-lock"></i></span>
+                            <span class="input-group-text"><i style="font-size:24px" class="fa">&#xf023;</i></span>
+                            <!--<span class="input-group-text"><i class="icon-lock"></i></span>-->
                         </div>
                         <input type="password" class="form-control" placeholder="Confirm Password" name="confirmation">
                     </div>
@@ -93,7 +102,7 @@
                     "confirmation": $("input[name='confirmation']").val(),
                 },
                 success: function(data, status) {
-                    console.log(data);
+                    // console.log(data);
                     if (data.isSignedUp) {
                         window.location = "index.php";
                     }
