photos added to img folder to be used with database->item->item_image_url

--- a/right_review_codebase/signup.html
+++ b/right_review_codebase/signup.html
@@ -104,7 +104,7 @@
                 success: function(data, status) {
                     // console.log(data);
                     if (data.isSignedUp) {
-                        window.location = "index.php";
+                        window.location = "search.php";
                     }
                     else {
                         $("#message").html("Error: " + data.message);
