fix login/signup relocation to search.html

--- a/right_review_codebase/login.html
+++ b/right_review_codebase/login.html
@@ -98,7 +98,7 @@
                     success: function(data, status) {
                         // console.log(data);
                         if (data.isAuthenticated) {
-                            window.location = "search.php"
+                            window.location = "search.html"
                         } else {
                             $("#message").html("Bad email or password");
                             $("#message").removeClass("open-hidden");
