--- a/right_review_codebase/search.html
+++ b/right_review_codebase/search.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Add a Website</a>
+                    <a class="nav-link" href="new_website.php">Add a Website</a>
                 </li>
             </ul>
         </div>
